  syntax = "proto3";
  
  message ProductInfo {
    string name = 1;
    uint32 product_id =2;
  }
 
  enum ErrorCode {
    kSuccess = 0;
    kFail = 1;
  }